<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardElevation="3dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="43dp">
                <TextView
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerInParent="true"
                    android:text="@string/dialog_file_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <LinearLayout
                android:background="@color/c_999999"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                />
            <RelativeLayout
                android:layout_below="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="43dp">

                <TextView
                    android:layout_marginLeft="17dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_name"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/dp16" />
                <TextView
                    android:id="@+id/dialog_detail_name"
                    android:layout_marginRight="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/dp16" />
            </RelativeLayout>
            <LinearLayout
                android:background="@color/c_dddddd"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"></LinearLayout>
            <RelativeLayout
                android:layout_below="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="43dp">

                <TextView
                    android:layout_marginLeft="17dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_time"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/dp16" />
                <TextView
                    android:id="@+id/dialog_detail_time"
                    android:layout_marginRight="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/dp16" />
            </RelativeLayout>

            <LinearLayout
                android:background="@color/c_dddddd"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0.1dp" />
            <RelativeLayout
                android:layout_below="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_marginLeft="17dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_length"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/dp16" />
                <TextView
                    android:id="@+id/dialog_detail_length"
                    android:layout_marginRight="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/dp16" />
            </RelativeLayout>

            <LinearLayout
                android:background="@color/c_dddddd"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0.1dp" />
            <RelativeLayout
                android:layout_below="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_marginLeft="17dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_samp"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/dp16" />
                <TextView
                    android:id="@+id/dialog_detail_samping"
                    android:layout_marginRight="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/dp16" />
            </RelativeLayout>

            <LinearLayout
                android:background="@color/c_dddddd"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0.1dp" />
            <RelativeLayout
                android:layout_below="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_marginLeft="17dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_encoming"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/dp16" />
                <TextView
                    android:id="@+id/dialog_detail_encoming"
                    android:layout_marginRight="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_333333"
                    android:textSize="@dimen/dp16" />
            </RelativeLayout>




        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>